--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1870,14 +1870,14 @@ a {
         padding: 10px; }
         .wrapper #content #best-sellers .container-full .features .products .product .cover-img {
           width: 100%;
-          height: 80%;
+          height: 290px;
           position: relative; }
           .wrapper #content #best-sellers .container-full .features .products .product .cover-img img {
-            width: 100%; }
+            width: 100%; height: 100%; }
           .wrapper #content #best-sellers .container-full .features .products .product .cover-img .cover-btns {
             width: 100%;
             position: absolute;
-            bottom: 5px;
+            bottom: 0px;
             left: 0;
             display: none; }
             .wrapper #content #best-sellers .container-full .features .products .product .cover-img .cover-btns .btn-add-cart {
@@ -2690,16 +2690,18 @@ a {
         padding: 10px; }
         .wrapper #content #best-sellers .container-full .features .products .product .cover-img {
           width: 100%;
-          height: 80%;
+          height: 290px;
           position: relative; }
           .wrapper #content #best-sellers .container-full .features .products .product .cover-img:hover {
             opacity: 0.7; }
           .wrapper #content #best-sellers .container-full .features .products .product .cover-img img {
-            width: 100%; }
+            width: 100%;
+          height: 100%; }
           .wrapper #content #best-sellers .container-full .features .products .product .cover-img .cover-btns {
             width: 100%;
+            bottom:0;
             position: absolute;
-            bottom: 5px;
+            
             left: 0;
             display: none; }
             .wrapper #content #best-sellers .container-full .features .products .product .cover-img .cover-btns .btn-add-cart {
