--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3072,7 +3072,10 @@ a {
             width: 100%; }
         .wrapper #content #cart .box-content ul.list-products li .product-order .details-product a {
           font-size: 16px;
-          text-decoration: none; }
+          text-decoration: none;
+          
+           }
+           
         .wrapper #content #cart .box-content ul.list-products li .product-order .btn-sub {
           width: 30px;
           height: 30px;
