--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -3783,6 +3783,9 @@ a{
 						}
 					}
 				}
+				fb-comments {
+					margin-left: 40px;
+				}
 			}
 			#login-register {
 				position: fixed;
